--- a/src/main/resources/com/codurance/unfluffed/static/index.html
+++ b/src/main/resources/com/codurance/unfluffed/static/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <script type="text/javascript" src="/_framework/faye/faye-browser-min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script type="text/javascript" src="/_framework/application.js"></script>
+        <script type="text/javascript" src="/framework/faye/faye-browser-min.js"></script>
+        <script type="text/javascript" src="/framework/unfluffed.js"></script>
     </head>
 
     <body>
